[project]
name = "greencompute-control-plane"
version = "0.1.0"
description = "Greenference control plane service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.32,<1.0",
  "pydantic>=2.9,<3.0",
  "greencompute-protocol",
  "greencompute-persistence",
]

[tool.uv.sources]
greencompute-persistence = { workspace = true }
greencompute-protocol = { path = "../../../greencompute/protocol" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greencompute_control_plane"]
