[project]
name = "greenference-gateway"
version = "0.1.0"
description = "Greenference public gateway"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.32,<1.0",
  "pydantic>=2.9,<3.0",
  "greenference-protocol",
  "greenference-control-plane",
  "greenference-builder",
  "stripe>=8.0.0",
]

[tool.uv.sources]
greenference-builder = { workspace = true }
greenference-control-plane = { workspace = true }
greenference-protocol = { path = "../../../greenference/protocol" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greenference_gateway"]
