[project]
name = "greencompute-gateway"
version = "0.1.0"
description = "Greenference public gateway"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.32,<1.0",
  "pydantic>=2.9,<3.0",
  "greencompute-protocol",
  "greencompute-control-plane",
  "greencompute-builder",
  "stripe>=8.0.0",
]

[tool.uv.sources]
greencompute-builder = { workspace = true }
greencompute-control-plane = { workspace = true }
greencompute-protocol = { path = "../../../greencompute/protocol" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greencompute_gateway"]
