[project]
name = "greencompute-validator"
version = "0.1.0"
description = "Greenference validator service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.32,<1.0",
  "pydantic>=2.9,<3.0",
  "python-multipart>=0.0.9",
  "greencompute-protocol",
  "greencompute-persistence",
]

[tool.uv.sources]
greencompute-persistence = { workspace = true }
greencompute-protocol = { path = "../../../greencompute/protocol" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greencompute_validator"]
